--- a/assets/templates/fruitcategory.html
+++ b/assets/templates/fruitcategory.html
@@ -40,15 +40,15 @@
             <div class="overlap-7">
               <div class="overlap-8">
                 <div class="rectangle"></div>
-                <div class="text-wrapper-8">VilleGo</div>
-                <div class="text-wrapper-9">ბლოგი</div>
-                <div class="text-wrapper-10">ფერმერები</div>
-                <div class="text-wrapper-11">ჩვენს შესახებ</div>
-                <div class="text-wrapper-12">კონტაქტი</div>
+                <a class="text-wrapper-8" href="../../index.html">VilleGo</a>
+                <a class="text-wrapper-9" href="../templates/blog.html">ბლოგი</a>
+                <a class="text-wrapper-10" href="../templates/farmers.html">ფერმერები</a>
+                <a class="text-wrapper-11" href="../templates/aboutus.html">ჩვენს შესახებ</a>
+                <a class="text-wrapper-12" href="../templates/aboutus.html">კონტაქტი</a>
                 <div class="rectangle-2"></div>
                 <img class="vector" src="https://c.animaapp.com/mfiam9rwqDhf7C/img/vector.svg" />
                 <div class="text-wrapper-13">ძებნა</div>
-                <div class="text-wrapper-14">რუკა</div>
+                <a class="text-wrapper-14" href="../templates/map.html">რუკა</div>
                 <img class="img" src="https://c.animaapp.com/mfiam9rwqDhf7C/img/-------.png" />
                 <img class="vector-2" src="https://c.animaapp.com/mfiam9rwqDhf7C/img/vector-1.svg" />
                 <img class="vector-3" src="https://c.animaapp.com/mfiam9rwqDhf7C/img/vector-2.svg" />
