--- a/assets/templates/help.html
+++ b/assets/templates/help.html
@@ -100,10 +100,10 @@
             <div class="overlap-6">
               <div class="rectangle"></div>
               <div class="text-wrapper-14">VilleGo</div>
-              <div class="text-wrapper-15 nav-link" onclick="handleNavClick('blog')">ბლოგი</div>
-              <div class="text-wrapper-16 nav-link" onclick="handleNavClick('farmers')">ფერმერები</div>
-              <div class="text-wrapper-17 nav-link" onclick="handleNavClick('about')">ჩვენს შესახებ</div>
-              <div class="text-wrapper-18 nav-link" onclick="handleNavClick('contact')">კონტაქტი</div>
+              <a class="text-wrapper-15 nav-link" href="../templates/blog.html" onclick="handleNavClick('blog')">ბლოგი</a>
+              <a class="text-wrapper-16 nav-link" href="../templates/farmers.html" onclick="handleNavClick('farmers')">ფერმერები</a>
+              <a class="text-wrapper-17 nav-link" href="../templates/aboutus.html" onclick="handleNavClick('about')">ჩვენს შესახებ</a>
+              <a class="text-wrapper-18 nav-link" href="../templates/aboutus.html" onclick="handleNavClick('contact')">კონტაქტი</a>
               <div class="rectangle-2"></div>
               <img class="vector-3" src="https://c.animaapp.com/mfi57usgRpJnbG/img/vector-5.svg" />
               <div class="text-wrapper-19">ძებნა</div>
@@ -160,14 +160,14 @@
               </div>
             </div>
             <img class="profile" src="https://c.animaapp.com/mfi57usgRpJnbG/img/profile.png" />
-            <div class="text-wrapper-22">დახმარება</div>
-            <div class="text-wrapper-23">ხშირად დასმული კითხვები</div>
-            <div class="text-wrapper-24">ანონიმური უკუკავშირი</div>
-            <div class="text-wrapper-25">ინფორმაცია</div>
-            <div class="text-wrapper-26">გაყიდვის პირობები</div>
-            <div class="text-wrapper-27">წესები და პირობები</div>
-            <div class="text-wrapper-28">მომხმარებელი</div>
-            <div class="text-wrapper-29">რეგისტრაცია</div>
+            <a class="text-wrapper-22" href="../templates/help.html">დახმარება</a>
+            <a class="text-wrapper-23" href="../templates/">ხშირად დასმული კითხვები</a>
+            <a class="text-wrapper-24" href="../templates/">ანონიმური უკუკავშირი</a>
+            <a class="text-wrapper-25" href="../templates/">ინფორმაცია</a>
+            <a class="text-wrapper-26" href="../templates/">გაყიდვის პირობები</a>
+            <a class="text-wrapper-27" href="../templates/">წესები და პირობები<a>
+            <a class="text-wrapper-28" href="../templates/personalpage.html">მომხმარებელი</a>
+            <a class="text-wrapper-29" href="../templates/signup.html">რეგისტრაცია</a>
             <div class="text-wrapper-30">მომხმარებლის გვერდი</div>
             <p class="p">
               <span class="text-wrapper-21">VilleGo</span>
@@ -197,12 +197,12 @@
             </p>
             <div class="text-wrapper-40">საქართველო</div>
           </div>
-          <div class="text-wrapper-41">დახმარების გვერდი</div>
-          <div class="text-wrapper-42">ჩვენს შესახებ</div>
-          <div class="text-wrapper-43">დაბრუნების პოლიტიკა</div>
-          <div class="text-wrapper-44">კონფიდენციალურობის პოლიტიკა</div>
-          <div class="text-wrapper-45">ფავორიტები</div>
-          <div class="text-wrapper-46">კალათა</div>
+          <a class="text-wrapper-41" href="../templates/help.html">დახმარების გვერდი</a>
+          <a class="text-wrapper-42" href="../templates/aboutus.html">ჩვენს შესახებ</a>
+          <a class="text-wrapper-43" href="../templates/">დაბრუნების პოლიტიკა</a>
+          <a class="text-wrapper-44" href="../templates/">კონფიდენციალურობის პოლიტიკა</a>
+          <a class="text-wrapper-45" href="../templates/favorites.html">ფავორიტები</a>
+          <a class="text-wrapper-46" href="../templates/cart.html">კალათა</a>
           <img class="vector-8" src="https://c.animaapp.com/mfi57usgRpJnbG/img/vector.svg" />
           <img class="d" src="https://c.animaapp.com/mfi57usgRpJnbG/img/d.svg" />
           <div class="vector-wrapper">
