--- a/assets/templates/login.html
+++ b/assets/templates/login.html
@@ -37,11 +37,11 @@
         <div class="view-2">
           <div class="overlap-3">
             <div class="text-wrapper-8">_________________________</div>
-            <div class="text-wrapper-9">შესვლა</div>
-            <div class="text-wrapper-10">VilleGo</div>
+            <a class="text-wrapper-9">შესვლა</a>
+            <a class="text-wrapper-10">VilleGo</a>
           </div>
         <div class="overlap-4">
-          <div class="text-wrapper-11">Password</div>
+          <a class="text-wrapper-11">Password</a>
           <img class="vector" src="https://c.animaapp.com/mfi7mocmH7J7Y7/img/vector-1.svg" />
           <input type="password" class="password-input" placeholder="" id="passwordInput" />
         </div>
