--- a/assets/templates/mapclick.html
+++ b/assets/templates/mapclick.html
@@ -199,15 +199,15 @@
             <div class="overlap-6">
               <div class="overlap-7">
                 <div class="rectangle-25"></div>
-                <div class="text-wrapper-33">VilleGo</div>
-                <div class="text-wrapper-34">ბლოგი</div>
-                <div class="text-wrapper-35">ფერმერები</div>
-                <div class="text-wrapper-36">ჩვენს შესახებ</div>
-                <div class="text-wrapper-37">კონტაქტი</div>
+                <a class="text-wrapper-33" href="../../index.html">VilleGo</a>
+                <a class="text-wrapper-34" href="../templates/blog.html">ბლოგი</a>
+                <a class="text-wrapper-35" href="../templates/farmers.html">ფერმერები</a>
+                <a class="text-wrapper-36" href="../templates/aboutus.html">ჩვენს შესახებ</a>
+                <a class="text-wrapper-37" href="../templates/aboutus.html">კონტაქტი</a>
                 <div class="rectangle-26"></div>
                 <img class="vector-15" src="https://c.animaapp.com/mfi8raj1Y0ebrk/img/vector-9.svg" />
                 <div class="text-wrapper-38">ძებნა</div>
-                <div class="text-wrapper-39">რუკა</div>
+                <a class="text-wrapper-39"  href="../templates/map.html">რუკა</a>
                 <img class="image-2" src="https://c.animaapp.com/mfi8raj1Y0ebrk/img/-------.png" />
                 <img class="vector-16" src="https://c.animaapp.com/mfi8raj1Y0ebrk/img/vector-7.svg" />
                 <img class="vector-17" src="https://c.animaapp.com/mfi8raj1Y0ebrk/img/vector-4.svg" />
