--- a/assets/templates/mapfilters.html
+++ b/assets/templates/mapfilters.html
@@ -173,21 +173,27 @@
             <div class="overlap-7">
               <div class="overlap-8">
                 <div class="rectangle-6"></div>
-                <div class="text-wrapper-18">VilleGo</div>
-                <div class="text-wrapper-19">ბლოგი</div>
-                <div class="text-wrapper-20">ფერმერები</div>
-                <div class="text-wrapper-21">ჩვენს შესახებ</div>
-                <div class="text-wrapper-22">კონტაქტი</div>
+                <a class="text-wrapper-18" href="../../index.html">VilleGo</a>
+                <a class="text-wrapper-19" href="../templates/blog.html">ბლოგი</a>
+                <a class="text-wrapper-20" href="../templates/farmers.html">ფერმერები</a>
+                <a class="text-wrapper-21" href="../templates/aboutus.html">ჩვენს შესახებ</a>
+                <a class="text-wrapper-22" href="../templates/aboutus.html">კონტაქტი</a>
                 <div class="rectangle-7"></div>
                 <img class="vector-5" src="https://c.animaapp.com/mfi8dfw57mUhdt/img/vector-6.svg" />
                 <div class="text-wrapper-23">ძებნა</div>
-                <div class="text-wrapper-24">რუკა</div>
-                <img class="image-2" src="https://c.animaapp.com/mfi8dfw57mUhdt/img/-------.png" />
-                <img class="vector-6" src="https://c.animaapp.com/mfi8dfw57mUhdt/img/vector-3.svg" />
-                <img class="vector-7" src="https://c.animaapp.com/mfi8dfw57mUhdt/img/vector-5.svg" />
-                <img class="vector-8" src="https://c.animaapp.com/mfi8dfw57mUhdt/img/vector-7.svg" />
-                <img class="plus-circle" src="https://c.animaapp.com/mfi8dfw57mUhdt/img/plus-circle---1441-.svg" />
-                <img class="ellipse-6" src="https://c.animaapp.com/mfi8dfw57mUhdt/img/ellipse-3981.png" />
+                <a class="text-wrapper-24" href="../templates/completemap.html">რუკა</a>
+                <a class="image-2" href="../templates/mapfilters.html">
+                <img  src="https://c.animaapp.com/mfi8dfw57mUhdt/img/-------.png" width="55px" height="55px" /></a>
+                <a class="vector-6" href="../templates/favorites.html">
+                <img  src="https://c.animaapp.com/mfi8dfw57mUhdt/img/vector-3.svg" width="22px" height="22px" /></a>
+                <a class="vector-7" href="../templates/cart.html">
+                <img  src="https://c.animaapp.com/mfi8dfw57mUhdt/img/vector-5.svg" width="22px" height="22px" /></a>
+                <a class="vector-8" href="../templates/messages.html">
+                <img  src="https://c.animaapp.com/mfi8dfw57mUhdt/img/vector-7.svg" width="22px" height="22px" /></a>
+                <a class="plus-circle" href="../templates/addstatement.html">
+                <img src="https://c.animaapp.com/mfi8dfw57mUhdt/img/plus-circle---1441-.svg" width="22px" height="22px" /></a>
+                <a class="ellipse-6" href="../templates/personalpage.html">
+                <img  src="https://c.animaapp.com/mfi8dfw57mUhdt/img/ellipse-3981.png" width="22px" height="22px" /></a>
               </div>
               <img class="group-16" src="https://c.animaapp.com/mfi8dfw57mUhdt/img/group-1859.png" />
             </div>
