--- a/assets/templates/message.html
+++ b/assets/templates/message.html
@@ -50,11 +50,11 @@
             <div class="overlap-group">
               <div class="overlap-group-2">
                 <div class="rectangle-16"></div>
-                <div class="text-wrapper-17" onclick="goHome()">VilleGo</div>
-                <div class="text-wrapper-18" onclick="navigateTo('blog')">ბლოგი</div>
-                <div class="text-wrapper-19" onclick="navigateTo('farmers')">ფერმერები</div>
-                <div class="text-wrapper-20" onclick="navigateTo('about')">ჩვენს შესახებ</div>
-                <div class="text-wrapper-21" onclick="navigateTo('contact')">კონტაქტი</div>
+                <a class="text-wrapper-17" href="../../index.html" onclick="goHome()">VilleGo</a>
+                <a class="text-wrapper-18" href="../templates/blog.html" onclick="navigateTo('blog')">ბლოგი</a>
+                <a class="text-wrapper-19" href="../templates/farmers.html" onclick="navigateTo('farmers')">ფერმერები</a>
+                <a class="text-wrapper-20" href="../templates/aboutus.html" onclick="navigateTo('about')">ჩვენს შესახებ</a>
+                <a class="text-wrapper-21" href="../templates/aboutus.html" onclick="navigateTo('contact')">კონტაქტი</a>
                 <div class="rectangle-17" onclick="performSearch()"></div>
                 <img class="vector" src="https://c.animaapp.com/mfi66fhpFDPyBi/img/vector-4.svg" onclick="performSearch()" />
                 <div class="text-wrapper-22" onclick="performSearch()">ძებნა</div>
@@ -111,15 +111,15 @@
                 </div>
               </div>
               <img class="profile" src="https://c.animaapp.com/mfi66fhpFDPyBi/img/profile.png" onclick="showCompanyInfo()" />
-              <div class="text-wrapper-25" onclick="navigateTo('help')">დახმარება</div>
-              <div class="text-wrapper-26" onclick="navigateTo('faq')">ხშირად დასმული კითხვები</div>
-              <div class="text-wrapper-27" onclick="navigateTo('feedback')">ანონიმური უკუკავშირი</div>
-              <div class="text-wrapper-28" onclick="navigateTo('info')">ინფორმაცია</div>
-              <div class  ="text-wrapper-29" onclick="navigateTo('terms')">გაყიდვის პირობები</div>
-              <div class="text-wrapper-30" onclick="navigateTo('conditions')">წესები და პირობები</div>
-              <div class="text-wrapper-31" onclick="navigateTo('user')">მომხმარებელი</div>
-              <div class="text-wrapper-32" onclick="navigateTo('register')">რეგისტრაცია</div>
-              <div class="text-wrapper-33" onclick="navigateTo('userpage')">მომხმარებლის გვერდი</div>
+              <a class="text-wrapper-25" href="../templates/help.html" onclick="navigateTo('help')">დახმარება</a>
+              <a class="text-wrapper-26" href="../templates/" onclick="navigateTo('faq')">ხშირად დასმული კითხვები</a>
+              <a class="text-wrapper-27" href="../templates/" onclick="navigateTo('feedback')">ანონიმური უკუკავშირი</a>
+              <a class="text-wrapper-28" href="../templates/" onclick="navigateTo('info')">ინფორმაცია</a>
+              <a class  ="text-wrapper-29" href="../templates/" onclick="navigateTo('terms')">გაყიდვის პირობები</a>
+              <a class="text-wrapper-30" href="../templates/" onclick="navigateTo('conditions')">წესები და პირობები</a>
+              <a class="text-wrapper-31" href="../templates/personalpage.html" onclick="navigateTo('user')">მომხმარებელი</a>
+              <a class="text-wrapper-32" href="../templates/signup.html" onclick="navigateTo('register')">რეგისტრაცია</a>
+              <a class="text-wrapper-33" href="../templates/personalpage.html" onclick="navigateTo('userpage')">მომხმარებლის გვერდი</a>
               <p class="ville-go-2">
                 <span class="text-wrapper-24">VilleGo</span>
                 <span class="text-wrapper-34">&nbsp;</span>
@@ -148,12 +148,12 @@
               </p>
               <div class="text-wrapper-43">საქართველო</div>
             </div>
-            <div class="text-wrapper-44" onclick="navigateTo('helppage')">დახმარების გვერდი</div>
-            <div class="text-wrapper-45" onclick="navigateTo('aboutpage')">ჩვენს შესახებ</div>
-            <div class="text-wrapper-46" onclick="navigateTo('returnpolicy')">დაბრუნების პოლიტიკა</div>
-            <div class="text-wrapper-47" onclick="navigateTo('privacy')">კონფიდენციალურობის პოლიტიკა</div>
-            <div class="text-wrapper-48" onclick="showFavorites()">ფავორიტები</div>
-            <div class="text-wrapper-49" onclick="showCart()">კალათა</div>
+            <a class="text-wrapper-44" href="../templates/help.html" onclick="navigateTo('helppage')">დახმარების გვერდი</a>
+            <a class="text-wrapper-45" href="../templates/" onclick="navigateTo('aboutpage')">ჩვენს შესახებ<a>
+            <a class="text-wrapper-46" href="../templates/" onclick="navigateTo('returnpolicy')">დაბრუნების პოლიტიკა<a>
+            <a class="text-wrapper-47" href="../templates/" onclick="navigateTo('privacy')">კონფიდენციალურობის პოლიტიკა</a>
+            <a class="text-wrapper-48" href="../templates/favorites.html" onclick="showFavorites()">ფავორიტები</a>
+            <a class="text-wrapper-49" href="../templates/cart.html" onclick="showCart()">კალათა</a>
             <img class="vector-6" src="https://c.animaapp.com/mfi66fhpFDPyBi/img/vector-1.svg" onclick="openSocialMedia('facebook')" />
             <img class="d" src="https://c.animaapp.com/mfi66fhpFDPyBi/img/d.svg" onclick="openSocialMedia('discord')" />
             <div class="vector-wrapper">
