--- a/assets/templates/messages.html
+++ b/assets/templates/messages.html
@@ -38,15 +38,15 @@
             <div class="overlap-2">
               <div class="overlap-3">
                 <div class="rectangle-4"></div>
-                <div class="text-wrapper-9">VilleGo</div>
-                <div class="text-wrapper-10">ბლოგი</div>
-                <div class="text-wrapper-11">ფერმერები</div>
-                <div class="text-wrapper-12">ჩვენს შესახებ</div>
-                <div class="text-wrapper-13">კონტაქტი</div>
+                <a class="text-wrapper-9" href="../../index.html">VilleGo</a>
+                <a class="text-wrapper-10" href="../templates/blog.html">ბლოგი</a>
+                <a class="text-wrapper-11" href="../templates/farmers.html">ფერმერები</a>
+                <a class="text-wrapper-12" href="../templates/aboutus.html">ჩვენს შესახებ</a>
+                <a class="text-wrapper-13" href="../templates/aboutus.html">კონტაქტი</a>
                 <div class="rectangle-5"></div>
                 <img class="vector-3" src="https://c.animaapp.com/mfi6k7g8YvyNxq/img/vector.svg" />
                 <div class="text-wrapper-14">ძებნა</div>
-                <div class="text-wrapper-15">რუკა</div>
+                <a class="text-wrapper-15" href="../templates/map.html">რუკა</a>
                 <img class="image" src="https://c.animaapp.com/mfi6k7g8YvyNxq/img/-------.png" />
                 <img class="vector-4" src="https://c.animaapp.com/mfi6k7g8YvyNxq/img/vector-6.svg" />
                 <img class="vector-5" src="https://c.animaapp.com/mfi6k7g8YvyNxq/img/vector-7.svg" />
@@ -99,15 +99,15 @@
                 </div>
               </div>
               <img class="profile" src="https://c.animaapp.com/mfi6k7g8YvyNxq/img/profile.png" />
-              <div class="text-wrapper-17">დახმარება</div>
+              <a class="text-wrapper-17" href="../templates/help.html">დახმარება</a>
               <div class="text-wrapper-18">ხშირად დასმული კითხვები</div>
               <div class="text-wrapper-19">ანონიმური უკუკავშირი</div>
               <div class="text-wrapper-20">ინფორმაცია</div>
               <div class="text-wrapper-21">გაყიდვის პირობები</div>
               <div class="text-wrapper-22">წესები და პირობები</div>
-              <div class="text-wrapper-23">მომხმარებელი</div>
-              <div class="text-wrapper-24">რეგისტრაცია</div>
-              <div class="text-wrapper-25">მომხმარებლის გვერდი</div>
+              <a class="text-wrapper-23" href="../templates/personalpage.html">მომხმარებელი</a>
+              <a class="text-wrapper-24" href="../templates/signup.html">რეგისტრაცია</a>
+              <a class="text-wrapper-25" href="../templates/personalpage.html">მომხმარებლის გვერდი</a>
               <p class="ville-go-2">
                 <span class="text-wrapper-16">VilleGo</span>
                 <span class="text-wrapper-26">&nbsp;</span>
@@ -136,12 +136,12 @@
               </p>
               <div class="text-wrapper-35">საქართველო</div>
             </div>
-            <div class="text-wrapper-36">დახმარების გვერდი</div>
-            <div class="text-wrapper-37">ჩვენს შესახებ</div>
+            <a class="text-wrapper-36" href="../templates/help.html">დახმარების გვერდი</a>
+            <a class="text-wrapper-37">ჩვენს შესახებ</div>
             <div class="text-wrapper-38">დაბრუნების პოლიტიკა</div>
             <div class="text-wrapper-39">კონფიდენციალურობის პოლიტიკა</div>
-            <div class="text-wrapper-40">ფავორიტები</div>
-            <div class="text-wrapper-41">კალათა</div>
+            <a class="text-wrapper-40" href="../templates/favorites.html">ფავორიტები</a>
+            <a class="text-wrapper-41" href="../templates/cart.html">კალათა</a>
             <img class="vector-8" src="https://c.animaapp.com/mfi6k7g8YvyNxq/img/vector-4.svg" />
             <img class="d" src="https://c.animaapp.com/mfi6k7g8YvyNxq/img/d.svg" />
             <div class="vector-wrapper">
