--- a/assets/templates/personalpage.html
+++ b/assets/templates/personalpage.html
@@ -15,11 +15,11 @@
         <span class="mobile-menu-title">VilleGo</span>
         <button class="close-menu" id="closeMenu">&times;</button>
       </div>
-      <a href="#" class="mobile-menu-item" data-action="blog">  ბლოგი</a>
-      <a href="#" class="mobile-menu-item" data-action="farmers">ფერმერები</a>
-      <a href="#" class="mobile-menu-item" data-action="about">ჩვენს შესახებ</a>
-      <a href="#" class="mobile-menu-item" data-action="contact">კონტაქტი</a>
-      <a href="#" class="mobile-menu-item" data-action="map">რუკა</a>
+      <a href="../templates/blog.html" class="mobile-menu-item" data-action="blog">  ბლოგი</a>
+      <a href="../templates/farmers.html" class="mobile-menu-item" data-action="farmers">ფერმერები</a>
+      <a href="../templates/aboutus.html" class="mobile-menu-item" data-action="about">ჩვენს შესახებ</a>
+      <a href="../templates/aboutus.html" class="mobile-menu-item" data-action="contact">კონტაქტი</a>
+      <a href="../templates/map.html" class="mobile-menu-item" data-action="map">რუკა</a>
       <a href="#" class="mobile-menu-item" data-action="search">ძებნა</a>
     </div>
     
@@ -60,15 +60,15 @@
             </div>
             <img class="line-2" src="https://c.animaapp.com/mfi80bqgvYcBNM/img/line-22.svg" />
           </div>
-          <div class="text-wrapper-8" data-action="add-listing">განცხადების დამატება</div>
-          <div class="text-wrapper-9" data-action="my-listings">ჩემი განცხადებები</div>
-          <div class="text-wrapper-10" data-action="my-cards">ჩემი ბარათები</div>
-          <div class="text-wrapper-11" data-action="my-orders">ჩემი შეკვეთები</div>
-          <div class="text-wrapper-12" data-action="offers">შეთავაზებები</div>
+          <a class="text-wrapper-8" href="../templates/addstatement.html" data-action="add-listing">განცხადების დამატება</a>
+          <a class="text-wrapper-9" href="../templates/personalpage.html" data-action="my-listings">ჩემი განცხადებები</a>
+          <a class="text-wrapper-10" href="../templates/personalpage.html" data-action="my-cards">ჩემი ბარათები</a>
+          <a class="text-wrapper-11" href="../templates/personalpage.html" data-action="my-orders">ჩემი შეკვეთები</a>
+          <a class="text-wrapper-12" href="../templates/honey.html" data-action="offers">შეთავაზებები</a>
           <div class="overlap-6">
             <div class="text-wrapper-13" data-action="addresses">მისამართები</div>
-            <div class="text-wrapper-14" data-action="messages">წერილები</div>
-            <div class="text-wrapper-15" data-action="cart">ჩემი კალათა</div>
+            <a class="text-wrapper-14" href="../templates/messages.html" data-action="messages">წერილები</a>
+            <a class="text-wrapper-15" href="../templates/cart.html" data-action="cart">ჩემი კალათა</a>
           </div>
           <div class="overlap-7">
             <div class="text-wrapper-16" data-action="settings">პარამეტრები</div>
@@ -153,15 +153,15 @@
           <div class="overlap-19">
             <div class="overlap-group-3">
               <div class="rectangle-8"></div>
-              <div class="text-wrapper-33" id="logoMain">VilleGo</div>
-              <div class="text-wrapper-34" data-action="blog">ბლოგი</div>
-              <div class="text-wrapper-35" data-action="farmers">ფერმერები</div>
-              <div class="text-wrapper-36" data-action="about">ჩვენს შესახებ</div>
-              <div class="text-wrapper-37" data-action="contact">კონტაქტი</div>
+              <a class="text-wrapper-33" href="../../index.html" id="logoMain">VilleGo</a>
+              <a class="text-wrapper-34" href="../templates/blog.html" data-action="blog">ბლოგი</a>
+              <a class="text-wrapper-35" href="../templates/farmers.html" data-action="farmers">ფერმერები</a>
+              <a class="text-wrapper-36" href="../templates/aboutus.html" data-action="about">ჩვენს შესახებ</a>
+              <a class="text-wrapper-37" href="../templates/aboutus.html" data-action="contact">კონტაქტი</a>
               <div class="rectangle-9"></div>
               <img class="vector-5" src="https://c.animaapp.com/mfi80bqgvYcBNM/img/vector-10.svg" />
               <div class="text-wrapper-38" id="searchBtn">ძებნა</div>
-              <div class="text-wrapper-39" data-action="map">რუკა</div>
+              <a class="text-wrapper-39" href="../templates/map.html" data-action="map">რუკა</a>
               <img class="image-11" src="https://c.animaapp.com/mfi80bqgvYcBNM/img/-------.png" />
               <img class="vector-6" src="https://c.animaapp.com/mfi80bqgvYcBNM/img/vector-7.svg" />
               <img class="vector-7" src="https://c.animaapp.com/mfi80bqgvYcBNM/img/vector-9.svg" />
