--- a/assets/templates/statement.html
+++ b/assets/templates/statement.html
@@ -20,7 +20,7 @@
             </div>
           </div>
           <img class="vector-2" src="https://c.animaapp.com/mfiax30qA3xL04/img/vector-22.svg" />
-          <div class="text-wrapper-2">კალათაში დამატება</div>
+          <a class="text-wrapper-2" href="../templates/cart.html">კალათაში დამატება</a>
         </div>
         <div class="rectangle-wrapper">
           <img class="rectangle" src="https://c.animaapp.com/mfiax30qA3xL04/img/rectangle-2362.png" />
@@ -160,15 +160,15 @@
           <div class="overlap-4">
             <div class="overlap-5">
               <div class="rectangle-4"></div>
-              <div class="text-wrapper-18">VilleGo</div>
-              <div class="text-wrapper-19">ბლოგი</div>
-              <div class="text-wrapper-20">ფერმერები</div>
-              <div class="text-wrapper-21">ჩვენს შესახებ</div>
-              <div class="text-wrapper-22">კონტაქტი</div>
+              <a class="text-wrapper-18" href="../../index.html">VilleGo</a>
+              <a class="text-wrapper-19" href="../templates/blog.html">ბლოგი</a>
+              <a class="text-wrapper-20" href="../templates/farmers.html">ფერმერები</a>
+              <a class="text-wrapper-21" href="../templates/aboutus.html">ჩვენს შესახებ</a>
+              <a class="text-wrapper-22" href="../templates/aboutus.html">კონტაქტი</a>
               <div class="rectangle-5"></div>
               <img class="vector-8" src="https://c.animaapp.com/mfiax30qA3xL04/img/vector-15.svg" />
               <div class="text-wrapper-23">ძებნა</div>
-              <div class="text-wrapper-24">რუკა</div>
+              <a class="text-wrapper-24" href="../templates/map.html">რუკა</a>
               <img class="image-2" src="https://c.animaapp.com/mfiax30qA3xL04/img/-------.png" />
               <img class="vector-9" src="https://c.animaapp.com/mfiax30qA3xL04/img/vector-7.svg" />
               <img class="vector-10" src="https://c.animaapp.com/mfiax30qA3xL04/img/vector-10.svg" />
@@ -221,15 +221,15 @@
               </div>
             </div>
             <img class="profile" src="https://c.animaapp.com/mfiax30qA3xL04/img/profile.png" />
-            <div class="text-wrapper-27">დახმარება</div>
-            <div class="text-wrapper-28">ხშირად დასმული კითხვები</div>
-            <div class="text-wrapper-29">ანონიმური უკუკავშირი</div>
-            <div class="text-wrapper-30">ინფორმაცია</div>
-            <div class="text-wrapper-31">გაყიდვის პირობები</div>
-            <div class="text-wrapper-32">წესები და პირობები</div>
-            <div class="text-wrapper-33">მომხმარებელი</div>
-            <div class="text-wrapper-34">რეგისტრაცია</div>
-            <div class="text-wrapper-35">მომხმარებლის გვერდი</div>
+            <a class="text-wrapper-27" href="../templates/help.html">დახმარება</a>
+            <a class="text-wrapper-28" href="../templates/">ხშირად დასმული კითხვები</a>
+            <a class="text-wrapper-29" href="../templates/">ანონიმური უკუკავშირი</a>
+            <a class="text-wrapper-30" href="../templates/">ინფორმაცია</a>
+            <a class="text-wrapper-31" href="../templates/">გაყიდვის პირობები</div>
+            <a class="text-wrapper-32" href="../templates/">წესები და პირობები</a>
+            <a class="text-wrapper-33" href="../templates/personalpage.html">მომხმარებელი</a>
+            <a class="text-wrapper-34" href="../templates/signup.html">რეგისტრაცია</a>
+            <a class="text-wrapper-35" href="../templates/personalpage.html">მომხმარებლის გვერდი</a>
             <p class="ville-go-2">
               <span class="text-wrapper-26">VilleGo</span>
               <span class="text-wrapper-36">&nbsp;</span>
@@ -258,12 +258,12 @@
             </p>
             <div class="text-wrapper-45">საქართველო</div>
           </div>
-          <div class="text-wrapper-46">დახმარების გვერდი</div>
-          <div class="text-wrapper-47">ჩვენს შესახებ</div>
-          <div class="text-wrapper-48">დაბრუნების პოლიტიკა</div>
-          <div class="text-wrapper-49">კონფიდენციალურობის პოლიტიკა</div>
-          <div class="text-wrapper-50">ფავორიტები</div>
-          <div class="text-wrapper-51">კალათა</div>
+          <a class="text-wrapper-46" href="../templates/help.html">დახმარების გვერდი</a>
+          <a class="text-wrapper-47" href="../templates/aboutus.html">ჩვენს შესახებ</a>
+          <a class="text-wrapper-48" href="../templates/">დაბრუნების პოლიტიკა</a>
+          <a class="text-wrapper-49" href="../templates/">კონფიდენციალურობის პოლიტიკა</a>
+          <a class="text-wrapper-50" href="../templates/favorites.html">ფავორიტები</a>
+          <a class="text-wrapper-51" href="../templates/cart.html">კალათა</a>
           <img class="vector-13" src="https://c.animaapp.com/mfiax30qA3xL04/img/vector-21.svg" />
           <img class="d" src="https://c.animaapp.com/mfiax30qA3xL04/img/d.svg" />
           <div class="group-11">
