--- a/assets/templates/map.html
+++ b/assets/templates/map.html
@@ -87,16 +87,16 @@
             <div class="overlap-3">
               <div class="overlap-4">
                 <div class="rectangle"></div>
-                <div class="text-wrapper-4">VilleGo</div>
-                <div class="text-wrapper-5 nav-link" data-page="blog">ბლოგი</div>
-                <div class="text-wrapper-6 nav-link" data-page="farmers">ფერმერები</div>
-                <div class="text-wrapper-7 nav-link" data-page="about">ჩვენს შესახებ</div>
-                <div class="text-wrapper-8 nav-link" data-page="contact">კონტაქტი</div>
+                <a class="text-wrapper-4">VilleGo</a>
+                <a class="text-wrapper-5 nav-link" href="../templates/blog.html" data-page="blog">ბლოგი<a>
+                <a class="text-wrapper-6 nav-link" href="../templates/farmers.html" data-page="farmers">ფერმერები</a>
+                <a class="text-wrapper-7 nav-link" href="../templates/aboutus.html" data-page="about">ჩვენს შესახებ</a>
+                <a class="text-wrapper-8 nav-link" href="../templates/aboutus.html" data-page="contact">კონტაქტი</a>
                 <div class="rectangle-2">
                   <input type="text" class="search-input" placeholder="ძებნა..." />
                 </div>
                 <img class="vector-3 search-icon" src="https://c.animaapp.com/mfi7uq1icN9dib/img/vector-10.svg" />
-                <div class="text-wrapper-10 nav-link" data-page="map">რუკა</div>
+                <a class="text-wrapper-10 nav-link" href="../templates/map.html" data-page="map">რუკა</a>
                 <img class="image-2" src="https://c.animaapp.com/mfi7uq1icN9dib/img/-------.png" />
                 <img class="vector-4" src="https://c.animaapp.com/mfi7uq1icN9dib/img/vector-13.svg" />
                 <img class="vector-5" src="https://c.animaapp.com/mfi7uq1icN9dib/img/vector-9.svg" />
